[package]
name = "migemo-everything"
version = "0.1.0"
edition = "2024"

[dependencies]
everything-sdk = "0.0.6"
rustmigemo = { git = "https://github.com/oguna/rustmigemo" }
windows = { version = "0.61", features = [
	"Win32_Foundation",
    "Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Controls",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_Time",
	"Win32_System_DataExchange",
	"Win32_System_Memory",
	"Win32_System_Ole",
	"Win32_System_SystemServices",
	"Win32_UI_Shell",
	"Win32_UI_HiDpi",
	"Win32_System_Com",
	"Win32_Storage_FileSystem",
	"Win32_UI_Shell_Common",
] }

[build-dependencies]
winres = "0.1.12" 
